# Microsoft-Dataverse-CLI

./: .env.example  .gitignore  CONNECTOR_DELETION_SUMMARY.md  README.md  delete_connector.py  pyproject.toml
dataverse_cli/: __init__.py  client.py  config.py  main.py  output.py
dataverse_cli/commands/: __init__.py  auth.py  entity.py  flow.py  solution.py
